Why tf did I need to fix the working status gap out of the blue???

--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,7 @@ p {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    gap: 0.9rem;
     border: 2px solid var(--borders-dark);
     background-color: transparent;
     border-radius: 15px;
